Follow-up r90730: always align CategoryTreeSection to the content language direction, otherwise the fix for r90730 breaks Special:CategoryTree

--- a/CategoryTree.css
+++ b/CategoryTree.css
@@ -49,7 +49,7 @@
 
 .CategoryTreeTag {
 	margin-top: 0.5ex;
-        margin-bottom: 0.5ex;
+	margin-bottom: 0.5ex;
 }
 
 .CategoryTreeNotice {
@@ -68,4 +68,8 @@ div.CategoryTreeInlineNode div {
 	margin:-0.5ex 0 0 1ex; /* why is the -0.5ex needed? */
 	padding:0;
 	vertical-align: top;
+}
+
+.CategoryTreeSection {
+	direction: ltr;
 }
