--- a/CategoryTree.rtl.css
+++ b/CategoryTree.rtl.css
@@ -6,3 +6,7 @@
 	margin-left: 0px;
 	margin-right: 1.5ex;
 }
+
+.CategoryTreeSection {
+	direction: rtl;
+}
